@@ -4,7 +4,10 @@
 
 An .clang-format file is provided. Write with compatibility with POSIX in mind and try to avoid Windows API functions as much as possible in order to reduce
 the number of `#ifdef`s. 
-Use PascalCase for structure names and camelCase for variable/function names. You can always assume the latest compiler (Only gcc is supported, but clang *should* work most of the time).
+
+Use PascalCase for structure names and camelCase for variable/function names.
+
+You can always assume the latest compiler (Only gcc is supported, but clang *should* work most of the time).
 Use as much `assert`s as needed. (For example if `malloc` fails and there is no other way to save the program)
 
 ### Java
@@ -24,6 +27,9 @@ if(foo)
 }
 ```
 You can always assume the latest java version, so you can use every feature of the language without hesitations.
+
+Until Java 17, the use of preview features is allowed (`--enable-preview`), after that, only normal, non-preview features should be used.
+
 Add as many testcases as needed, if you add a new method. Write Javadoc for every new public class/method/constant.
 Always qualify field- and method accesses with `this`:
 ```
